# morph-chess

./: .gitignore  README.md  Untitled.ipynb  agent.py  agent2.py  chess_config_1.json  chess_config_2.json  chess_config_3.json  chess_engine.py  chess_game.py  chess_monitor.py  chess_monitor2.py  chess_test.py  config.yaml  delete_all_instances.py  delete_all_snapshots.py  entrypoint.sh  morph_orchestrator.ipynb  morph_orchestrator.py  morph_orchestrator2.ipynb  orchestrator.py  pyproject.toml  requirements.txt  schemas.py  sync_gamestate.py  sync_gamestate2.py  test_configs.py  tmp.py  tmp2.py  tmp3.py  visualize_game.py
morph_docs/: branching.txt  execute_commands.txt  http.txt  lifecycles.txt  metadata.txt  pause_and_resume.txt  snapshots.txt  ssh.txt
tmp/: game_id_1_tmp.json  game_id_2_tmp.json  game_id_3_tmp.json
